<resources>
    <string name="app_name">Proyecto_PM1_G_5_Resp</string>
    <string name="logName"> Nombre </string>
    <string name="logmail"> E-MAIL </string>
    <string name="logPass"> Contraseña </string>
    <string name="logIng"> Ingresar </string>
    <string name="logReg"> Registrarse </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>