<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="642dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="4dp">

        <EditText
            android:id="@+id/txtLogEmail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/logmail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtLogPass"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/logPass"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <Button
            android:id="@+id/btnLogEnter"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/logIng" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <Button
            android:id="@+id/btnLogReg"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/logReg" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>