<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up_Activity">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="558dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="8dp" >

        <EditText
            android:id="@+id/txtSignName"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/logName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSignMail"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/logmail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSignPass"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/logPass"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <Button
            android:id="@+id/btnSignEnter"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/logReg" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>